add prevent default

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 	<div class="principal">
 		<div class="wrap">
-			<form class="formulario" action="" >
+			<form class="formulario" action="" id="agregarTarea" >
 				<input type="text" id="tareaNueva" placeholder="Agregar tarea">
-				<input type="button" class="boton" id="agregarTarea" value="Agregar Tarea">
+				<input type="submit" class="boton" value="Agregar Tarea">
 			</form>
 		</div>
 	</div>
